tweeked isAboveValid, isBelowValid...